[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Main_Menu.gd" type="Script" id=1]
[ext_resource path="res://resource/pintura-menu.png" type="Texture" id=2]
[ext_resource path="res://resource/logotipo.png" type="Texture" id=3]

[node name="Main_Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( -3.4248, -3.4248 )
texture = ExtResource( 2 )
centered = false

[node name="PlayButton" type="Button" parent="."]
margin_left = 808.0
margin_top = 566.0
margin_right = 940.0
margin_bottom = 607.0
rect_scale = Vector2( 2.32, 2.32 )
text = "JOGAR"

[node name="CreditsButton" type="Button" parent="."]
margin_left = 804.753
margin_top = 685.306
margin_right = 936.753
margin_bottom = 728.306
rect_scale = Vector2( 2.32, 2.32 )
text = "CRÃ‰DITOS"

[node name="ExitButton" type="Button" parent="."]
margin_left = 1580.0
margin_top = 950.0
margin_right = 1712.0
margin_bottom = 993.0
rect_scale = Vector2( 2.32, 2.32 )
text = "SAIR"

[node name="CreditsPanel" type="Panel" parent="."]
visible = false
margin_left = 68.0
margin_top = 37.0
margin_right = 517.0
margin_bottom = 286.0
rect_scale = Vector2( 4, 4 )

[node name="CreditsText" type="Label" parent="CreditsPanel"]
margin_left = 29.6099
margin_top = 14.8049
margin_right = 317.61
margin_bottom = 250.805
text = "Programadores:
- Carlos
- Alec

Artistas:
- Ana
- Arthur


Agradecemos por jogar nosso jogo!
Visite: www.gamux.com.br"

[node name="CloseCreditsButton" type="Button" parent="CreditsPanel"]
margin_left = 730.0
margin_top = 940.0
margin_right = 979.999
margin_bottom = 977.0
rect_scale = Vector2( 1.5, 1.5 )
text = "FECHAR"

[node name="Title" type="Sprite" parent="."]
position = Vector2( 1681.41, 282.383 )
texture = ExtResource( 3 )
